[gd_scene load_steps=29 format=3]

[ext_resource type="AudioStream" path="res://assets/music/characterSelectStage.ogg" id="1"]
[ext_resource type="Script" path="res://src/scripts/UI/Start.gd" id="2"]
[ext_resource type="Texture2D" path="res://assets/images/loading/loading.jpg" id="3"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/7.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/8.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/10.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/9.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/0.png" id="9"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/1.png" id="10"]
[ext_resource type="PackedScene" path="res://src/component/buttons/Button1.tscn" id="11"]
[ext_resource type="Texture2D" path="res://assets/images/ui/windowcommon/Panel.png" id="12"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/34.png" id="13"]
[ext_resource type="Texture2D" path="res://assets/images/ui/selectcharacter/2.png" id="14"]
[ext_resource type="PackedScene" path="res://src/scenes/UI/characterCreate/acter.tscn" id="15"]
[ext_resource type="Theme" path="res://src/component/theme/vscrollbar.tres" id="16"]
[ext_resource type="PackedScene" path="res://src/scenes/UI/characterCreate/CharacterCreate.tscn" id="17"]
[ext_resource type="ButtonGroup" path="res://src/scenes/UI/characterCreate/select_buttongroup.tres" id="18"]
[ext_resource type="AudioStream" path="res://assets/sounds/ui/click2.ogg" id="19"]
[ext_resource type="AudioStream" path="res://assets/sounds/ui/icondrop.ogg" id="20"]
[ext_resource type="FontFile" path="res://assets/fonts/DroidSansChinese.ttf" id="21"]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource("9")
region_rect = Rect2( 0, 0, 800, 600 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource("21")

[sub_resource type="Theme" id=3]
TooltipLabel/colors/font_color = Color( 0, 0, 0, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = SubResource("2")

[sub_resource type="FontFile" id=8]
font_data = ExtResource("21")

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource("6")
region_rect = Rect2( 0, 0, 125, 43 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource("8")
region_rect = Rect2( 0, 0, 125, 43 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource("7")
region_rect = Rect2( 0, 0, 125, 43 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource("5")
region_rect = Rect2( 0, 0, 125, 43 )

[node name="Start" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")
script = ExtResource("2")
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Sprite2D" parent="."]
visible = false
position = Vector2( 400.269, 49.1325 )
texture = ExtResource("10")

[node name="SelectCharacter" type="Control" parent="."]
offset_right = 800.0
offset_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="panelbg" type="NinePatchRect" parent="SelectCharacter"]
modulate = Color( 1, 1, 1, 0.866667 )
offset_left = 19.0
offset_top = 70.0
offset_right = 783.0
offset_bottom = 515.0
texture = ExtResource("12")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Sprite2D" parent="SelectCharacter"]
position = Vector2( 174.005, 96.4892 )
texture = ExtResource("14")

[node name="kuang" type="NinePatchRect" parent="SelectCharacter"]
offset_left = 26.0
offset_top = 77.0
offset_right = 778.0
offset_bottom = 512.0
texture = ExtResource("13")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SelectCharacter"]
anchor_right = 1.0
anchor_bottom = 0.852
offset_left = 28.0
offset_top = 87.0
offset_right = -24.9999
offset_bottom = -6.20001
custom_minimum_size = Vector2( 747, 418 )
theme = ExtResource("16")
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SelectCharacter/ScrollContainer"]
offset_right = 734.0
offset_bottom = 837.0
custom_minimum_size = Vector2( 734, 740 )
theme_override_constants/v_separation = 3
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acter1" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 119.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter2" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 123.0
offset_right = 242.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter3" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 246.0
offset_right = 365.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter4" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 369.0
offset_right = 488.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter5" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 492.0
offset_right = 611.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter6" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 615.0
offset_right = 734.0
offset_bottom = 207.0
group = ExtResource("18")

[node name="acter7" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 210.0
offset_right = 119.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter8" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 123.0
offset_top = 210.0
offset_right = 242.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter9" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 246.0
offset_top = 210.0
offset_right = 365.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter10" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 369.0
offset_top = 210.0
offset_right = 488.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter11" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 492.0
offset_top = 210.0
offset_right = 611.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter12" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 615.0
offset_top = 210.0
offset_right = 734.0
offset_bottom = 417.0
group = ExtResource("18")

[node name="acter13" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 420.0
offset_right = 119.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter14" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 123.0
offset_top = 420.0
offset_right = 242.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter15" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 246.0
offset_top = 420.0
offset_right = 365.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter16" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 369.0
offset_top = 420.0
offset_right = 488.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter17" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 492.0
offset_top = 420.0
offset_right = 611.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter18" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 615.0
offset_top = 420.0
offset_right = 734.0
offset_bottom = 627.0
group = ExtResource("18")

[node name="acter19" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 630.0
offset_right = 119.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="acter20" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 123.0
offset_top = 630.0
offset_right = 242.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="acter21" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 246.0
offset_top = 630.0
offset_right = 365.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="acter22" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 369.0
offset_top = 630.0
offset_right = 488.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="acter23" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 492.0
offset_top = 630.0
offset_right = 611.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="acter24" parent="SelectCharacter/ScrollContainer/GridContainer" instance=ExtResource("15")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 615.0
offset_top = 630.0
offset_right = 734.0
offset_bottom = 837.0
group = ExtResource("18")

[node name="createBtn" parent="." instance=ExtResource("11")]
offset_left = 137.0
offset_top = 536.0
offset_right = 214.0
offset_bottom = 559.0
text = "创建角色"

[node name="deleteBtn" parent="." instance=ExtResource("11")]
offset_left = 215.572
offset_top = 536.0
offset_right = 292.572
offset_bottom = 559.0
text = "删除角色"

[node name="optionBtn" parent="." instance=ExtResource("11")]
offset_left = 507.241
offset_top = 536.0
offset_right = 584.241
offset_bottom = 559.0
text = "选项"

[node name="closeBtn" parent="." instance=ExtResource("11")]
offset_left = 587.421
offset_top = 536.0
offset_right = 664.421
offset_bottom = 559.0
text = "结束游戏"

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -73.204
offset_right = 62.5
offset_bottom = -30.204
custom_minimum_size = Vector2( 125, 43 )
tooltip_text = "开始游戏"
focus_mode = 0
theme = SubResource("3")
theme_override_fonts/font = SubResource("8")
theme_override_styles/hover = SubResource("4")
theme_override_styles/pressed = SubResource("5")
theme_override_styles/disabled = SubResource("6")
theme_override_styles/normal = SubResource("7")
focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1")
autoplay = true
bus = "BGM"

[node name="CharacterCreate" parent="." instance=ExtResource("17")]
visible = false

[node name="clickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19")
bus = "SFX"

[node name="selectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20")
bus = "SFX"

[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter1" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter2" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter3" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter4" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter5" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter6" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter7" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter8" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter9" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter10" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter11" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter12" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter13" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter14" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter15" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter16" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter17" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter18" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter19" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter20" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter21" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter22" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter23" to="." method="_on_acter_toggled"]
[connection signal="toggled" from="SelectCharacter/ScrollContainer/GridContainer/acter24" to="." method="_on_acter_toggled"]
[connection signal="pressed" from="createBtn" to="." method="_on_createBtn_pressed"]
[connection signal="pressed" from="closeBtn" to="." method="_on_quitGame"]
[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_closeLoading"]
